# fund_manager

./: Cargo.toml  README.md  stokenet.md
defi_protocols/flux/: Cargo.toml
defi_protocols/flux/src/: flux_wrapper.rs  lib.rs
defi_protocols/ociswap/: Cargo.toml
defi_protocols/ociswap/src/: lib.rs  ociswap_lp_pool2_wrapper.rs  ociswap_lp_precision_pool_wrapper.rs
defi_protocols/root_finance/: Cargo.toml
defi_protocols/root_finance/src/: lib.rs  root_finance_wrapper.rs
defi_protocols/surge/: Cargo.toml
defi_protocols/surge/src/: lib.rs  surge_wrapper.rs
defi_protocols/weft/: Cargo.toml
defi_protocols/weft/src/: lib.rs  weft_wrapper.rs
dex/: Cargo.toml
dex/src/: lib.rs  multi_dex_wrapper.rs
dexes/caviarnine/: Cargo.toml
dexes/caviarnine/src/: caviarnine_wrapper.rs  lib.rs
dexes/ociswap/: Cargo.toml
dexes/ociswap/src/: lib.rs  ociswap_precision_pool_wrapper.rs
fund_manager/: Cargo.toml
fund_manager/src/: common.rs  fund_manager.rs  lib.rs
oracle/: Cargo.toml
oracle/src/: lib.rs  multi_oracle_wrapper.rs
oracles/morpher/: Cargo.toml
oracles/morpher/src/: lib.rs  morpher_wrapper.rs
oracles/ociswap/: Cargo.toml
oracles/ociswap/src/: lib.rs  ociswap_oracle_wrapper.rs
