[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
scrypto-test = { version = "1.3.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[workspace]
resolver = "2"
members= [
        "fund_manager",
	"defi_protocols/weft",
	"defi_protocols/root_finance",
	"defi_protocols/ociswap",
	"defi_protocols/flux",
#	"defi_protocols/surge",
	"dexes/ociswap",
	"dexes/caviarnine",
	"oracles/morpher",
	"oracles/ociswap",
]

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
